(1) index.html was copied to index0.html for eventual clojure/neo4j project import. (2) Corrected class "container" so that navbar has 100% width. (3) Created add.html (will convert old data pages to new interface BEFORE creating new Neo4j data interface. (4) (From earlier commt): Changed Footer div from being fixed to bottom of page to float under content div to prevent it from overlapping content div.

--- a/_customcss/navbar.css
+++ b/_customcss/navbar.css
@@ -2,6 +2,7 @@
 .navbar{
     display: block;
     margin-bottom: 20px;
+    width: 100%;
 }
 
 .navbar-default{
