--- a/_customcss/page.css
+++ b/_customcss/page.css
@@ -5,6 +5,7 @@ body{
 .container{
     padding-right: 0;
     padding-left: 0;
+    width: 100%;
 }
 
 .container-fluid{
